# ning

./: ChatArea.tsx  LICENSE  README.md  create_shortcut_and_run.bat  index.html  linux_auto.sh  mac_auto.sh  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  release.yml  rust.yml
public/: manifest.json  sw.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: ollamaClient.ts  ragCore.ts
src/components/: ChatArea.tsx  CustomizeModal.tsx  HistorySidebar.tsx  InstallPrompt.tsx  SettingsContent.tsx  SettingsSidebar.tsx  Sidebar.tsx
src/components/ui/: button.tsx
src/lib/: registerSW.ts
src/store/: useAppStore.ts  useOllamaStore.ts  useRagStore.ts
