[package]
name = "ning"
version = "0.0.0"
description = "Local Thinking Total Protection"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "system-tray", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
