[package]
name = "ning"
version = "0.1.1"
description = "Local Thinking Total Protection"
authors = ["joscarpone"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.5"
reqwest = { version = "0.13.4", features = ["stream"] }
futures-util = "0.3.32"
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
