[package]
name = "ning"
version = "0.1.1"
description = "Local Thinking Total Protection"
authors = ["joscarpone"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.5"
reqwest = { version = "0.13.4", features = ["stream"] }
futures-util = "0.3.32"
tokio = { version = "1", features = ["full"] }
pdf-extract = "0.10.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
once_cell = "1.21.4"
chrono = "0.4.45"
sqlite-vec = "0.1.9"

[features]
custom-protocol = ["tauri/custom-protocol"]
